<resources>
    <string name="app_name">Детский браузер</string>
    <string name="content">Hello</string>
    <string name="choose_your_school">Выбрать школу</string>
    <string name="search_title">Поиск</string>
    <string name="search_hint">Поиск в интернете</string>
    <string name="url_key">url</string>
    <string name="go_to_yandex">Перейти на http://yandex.ru</string>
    <string name="home">Вернуться домой</string>
    <string name="cover">Обложка</string>
    <string name="cards">Карточки</string>
    <string name="tabs">Вкладки</string>
    <string name="favorites">Любимое</string>
    <string name="cards_title">Популярное в школе</string>
    <string name="like_content_description">Лайк</string>
    <string name="favourite_cards_title">Любимые карточки</string>
    <string name="category_cover">category cover</string>
    <string name="unsafe_page">Небезопасная страница</string>
    <string name="choose_school">Выбрать школу</string>
    <string name="error_text">Ошибка! Нажмите здесь, чтобы повторить загрузку</string>
    <string name="remove_tab">Удалить вкладку</string>
    <string name="preview">Превью страницы</string>
    <string name="yandex_logo">Yandex Logo</string>
    <string name="share">Поделись ссылкой с друзьями</string>
    <string name="favicon">favicon</string>
    <string name="icon">icon</string>
    <string name="favorite_cards">Здесь будут храниться любимые карточки</string>
    <string name="empty_favorites">Empty favorites</string>
    <string name="separator">›</string>
    <string name="background">background</string>
    <string name="intro_text">Твой выход\nв интернет</string>
    <string name="start">Начать</string>
    <string name="intro_description_first">Потяни влево, попробуй</string>
    <string name="intro_title_first">Что интересно твоим друзьям?</string>
    <string name="intro_title_second">Отмечай, что понравится</string>
    <string name="intro_description_second">Тогда здесь будет больше интересного</string>
    <string name="hand">hand</string>
    <string name="check_internet_connection">Проверьте интернет-соединение</string>
    <string name="last">last card</string>
    <string name="last_card_text">Расскажи одноклассникам о браузере, чтобы здесь было больше карточек</string>
    <string name="back">К началу</string>
    <string name="error_init_failure">Невозможно проиграть видео</string>
    <string name="DEVELOPER_KEY">AIzaSyDky_kn7DJtD05ZTsmcYLhiLsIidr2ZMeM</string>
    <string name="play">play</string>
    <string name="share_app_text">Привет! Браузер с популярным в школе! Вот ссылка http://bit.ly/yashkola</string>
    <string name="share_title">Пора рассказать друзьям в школе!</string>
    <string name="share_description">Нажми на карточку и не отпускай</string>
</resources>
