<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:id="@+id/empty_favorites"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="2"
        android:contentDescription="@string/last"
        android:src="@drawable/cardend_of_end"/>

    <TextView
        android:layout_width="188dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:letterSpacing="0.012"
        android:lineSpacingMultiplier="1.2"
        android:text="@string/last_card_text"
        android:textAlignment="center"
        android:textColor="@color/dark_grey"
        android:textSize="14sp"
        tools:ignore="UnusedAttribute"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="top|center_horizontal"
        android:layout_weight="1">

        <ImageView
            android:id="@+id/back_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/back"
            android:src="@drawable/btn_back"/>
    </LinearLayout>

</LinearLayout>