<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/background"
        android:scaleType="centerCrop"
        android:src="@drawable/bg_balls"/>

    <TextView
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/start_btn"
        android:layout_centerHorizontal="true"
        android:letterSpacing="0.019"
        android:text="@string/intro_text"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        tools:ignore="UnusedAttribute"/>

    <Button
        android:id="@+id/start_btn"
        style="@style/IntroButton"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="32dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginTop="32dp"
        android:clickable="true"
        android:foreground="?android:attr/selectableItemBackground"
        android:text="@string/start"
        android:textColor="@color/darkest_transparent"/>
</RelativeLayout>
