<?xml version="1.0" encoding="utf-8"?>
<ru.yandex.detbr.ui.android_views.SquareCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/share_card"
    style="@style/Card"
    app:cardCornerRadius="15dp"
    app:cardElevation="4dp"
    app:cardUseCompatPadding="true"
    tools:ignore="UnusedAttribute">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UseCompoundDrawables">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_margin="16dp"
            android:ellipsize="end"
            android:maxLines="2"
            android:text="@string/share_title"
            android:textColor="@color/darkest_grey"
            android:textSize="28sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/description"
            style="@style/CardDescriptionStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/title"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/share_description"
            android:textColor="@color/light_transparent"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:src="@drawable/hand_share"
            android:contentDescription="@string/hand"/>

    </RelativeLayout>
</ru.yandex.detbr.ui.android_views.SquareCardView>